--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <!-- Fixed navbar-->
-  <div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
+  <div role="navigation" class="navbar navbar-fixed-top">
     <div class="container padd">
       <div class="navbar-header">
-        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">SRomán</a>
+        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"><img src="img/push.png" class="logo"/></a>
       </div>
       <div id="collapse" class="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -32,11 +32,18 @@
     </div>
   </div>
   <div class="main">
+    <div class="conatiner">
+      <div id="sobre_mi" class="pt-100">
+        <div class="row"></div>
+      </div>
+    </div>
+  </div>
+  <div class="main">
     <div class="container text-center">
       <div id="portafolio" class="pt-100">
         <div class="row">
           <div class="title">
-            <div class="h1">PORTAFOLIO</div>
+            <div class="h1">PORTAFOLIO </div>
             <div class="img-icon"><img src="img/habilidades_3.png" class="w-100"/>
             </div>
           </div>
