--- a/index.html
+++ b/index.html
@@ -22,11 +22,26 @@
       </div>
     </div>
   </div>
-  <!--fin header-->
+  <!--fin header	-->
   <div class="Hero">
     <div class="container-fluid">
       <div class="row">
-        <div class="carrusel"><img src="img/hero1.jpg" class="w-100"/>
+        <div id="carousel" data-ride="carousel" class="carousel slide">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="item active"><img src="img/hero1.jpg" class="w-100"/>
+              <div class="carousel-caption"></div>
+            </div>
+            <div class="item"><img src="img/hero2.jpg" class="w-100"/>
+              <div class="carousel-caption"></div>
+            </div>
+            <div class="item"><img src="img/hero3.jpg" class="w-100"/>
+              <div class="carousel-caption"></div>
+            </div><a href="#carousel" data-slide="prev" class="left carousel-control"><span class="glyphicon glyhicon-chevron-left"></span></a><a href="#carousel" data-slide="prev" class="right carousel-control"><span class="glyphicon glyhicon-chevron-right"></span></a>
+          </div>
         </div>
       </div>
     </div>
@@ -34,7 +49,19 @@
   <div class="main">
     <div class="conatiner">
       <div id="sobre_mi" class="pt-100">
-        <div class="row"></div>
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="yo">
+              <div id="contendor"><img src="img/sobre_mi.jpg" class="w-100"/>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="textSobreMi">
+              <div id="maquina"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -121,3 +148,4 @@
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script src="js/scroll.js"></script>
+<script src="js/main.js"></script>
