--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8"/>
   <title>Sarita Coder</title>
   <link rel="stylesheet" href="css/main.css"/>
+  <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css"/>
 </head>
 <body>
   <!-- Fixed navbar-->
-  <div role="navigation" class="navbar navbar-fixed-top">
+  <div id="menu" role="navigation" class="navbar navbar-fixed-top">
     <div class="container padd">
       <div class="navbar-header">
-        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"><img src="img/push.png" class="logo"/></a>
+        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"><span class="logo"></span></a>
       </div>
       <div id="collapse" class="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#" class="hvr-bounce-to-right">Sobre mí</a></li>
-          <li><a href="#portafolio" class="hvr-bounce-to-right">Portafolio</a></li>
-          <li><a href="#contact" class="hvr-bounce-to-right">Habilidades</a></li>
-          <li><a href="#contact" class="hvr-bounce-to-right">Contacto</a></li>
+          <li class="active"><a href="#Sobremi" class="link-header">Sobre mí</a></li>
+          <li><a href="#portafolio" class="link-header">Portafolio</a></li>
+          <li><a href="#contact" class="link-header">Habilidades</a></li>
+          <li><a href="#contact" class="link-header">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -47,18 +48,21 @@
     </div>
   </div>
   <div class="main">
-    <div class="conatiner">
-      <div id="sobre_mi" class="pt-100">
+    <div class="container-fluid text-center">
+      <div id="Sobremi" class="pt-100">
         <div class="row">
-          <div class="col-sm-6">
-            <div class="yo">
-              <div id="contendor"><img src="img/sobre_mi.jpg" class="w-100"/>
-              </div>
+          <div class="title">
+            <h1>Sobre mi</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-2">
+            <div class="hoverSM"><img src="img/sobremi.png" class="w-100"/>
             </div>
           </div>
-          <div class="col-sm-6">
-            <div class="textSobreMi">
-              <div id="maquina"></div>
+          <div class="col-2">
+            <div class="description">
+              <p>Coder apasionada por el código </p>
             </div>
           </div>
         </div>
@@ -70,12 +74,13 @@
       <div id="portafolio" class="pt-100">
         <div class="row">
           <div class="title">
-            <div class="h1">PORTAFOLIO </div>
-            <div class="img-icon"><img src="img/habilidades_3.png" class="w-100"/>
-            </div>
+            <h1>Portafolio</h1>
           </div>
         </div>
         <div class="row">
+          <div class="img-icon"></div>
+        </div>
+        <div class="row"><img src="img/habilidades_3.png" class="w-100"/>
           <div class="col-sm-4">
             <div class="portafolio">
               <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
