--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#Sobremi" class="link-header">Sobre mí</a></li>
           <li><a href="#portafolio" class="link-header">Portafolio</a></li>
-          <li><a href="#contact" class="link-header">Habilidades</a></li>
-          <li><a href="#contact" class="link-header">Contacto</a></li>
+          <li><a href="#habilidades" class="link-header">Habilidades</a></li>
+          <li><a href="#contacto" class="link-header">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -33,120 +33,221 @@
             <li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>
           </ol>
           <div class="carousel-inner">
-            <div class="item active"><img src="img/hero1.jpg" class="w-100"/>
-              <div class="carousel-caption"></div>
-            </div>
-            <div class="item"><img src="img/hero2.jpg" class="w-100"/>
+            <div class="item active"><img src="img/hero2.jpg" class="w-100"/>
               <div class="carousel-caption"></div>
             </div>
             <div class="item"><img src="img/hero3.jpg" class="w-100"/>
               <div class="carousel-caption"></div>
-            </div><a href="#carousel" data-slide="prev" class="left carousel-control"><span class="glyphicon glyhicon-chevron-left"></span></a><a href="#carousel" data-slide="prev" class="right carousel-control"><span class="glyphicon glyhicon-chevron-right"></span></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="main">
-    <div class="container-fluid text-center">
-      <div id="Sobremi" class="pt-100">
-        <div class="row">
-          <div class="title">
-            <h1>Sobre mi</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-2">
-            <div class="hoverSM"><img src="img/sobremi.png" class="w-100"/>
             </div>
-          </div>
-          <div class="col-2">
-            <div class="description">
-              <p>Coder apasionada por el código </p>
+            <div class="item"><img src="img/hero7.jpg" class="w-100"/>
+              <div class="carousel-caption"></div>
+            </div>
+            <div class="item"><img src="img/hero5.jpg" class="w-100"/>
+              <div class="carousel-caption"></div>
+            </div>
+            <div class="item"><img src="img/hero6.jpg" class="w-100"/>
+              <div class="carousel-caption"></div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="main">
+  <div id="Sobremi">
     <div class="container text-center">
-      <div id="portafolio" class="pt-100">
-        <div class="row">
-          <div class="title">
-            <h1>Portafolio</h1>
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="col-etiqueta text-center">
+            <div class="contedor">
+              <div class="etiqueta etiq"></div>
+            </div>
+            <div class="poligono"></div>
+            <p> <a href="" class="actitudes">Fuerza</a></p>
+            <hr class="ln1"/>
+            <p> <a href="" class="actitudes">Perseverante</a></p>
+            <hr class="ln1"/>
+            <p> <a href="" class="actitudes">Naturaleza</a></p>
+            <div class="contenedor etiqueta etiq2"></div>
           </div>
         </div>
-        <div class="row">
-          <div class="img-icon"></div>
-        </div>
-        <div class="row"><img src="img/habilidades_3.png" class="w-100"/>
-          <div class="col-sm-4">
-            <div class="portafolio">
-              <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
-                <div class="btn-star"></div>
-              </div><a href="">
-                <div class="informacion w-100">
-                  <h1>BLOG LOVE</h1>
-                </div></a>
+        <div class="col-sm-9 pd-50">
+          <div class="row">
+            <div class="col-foto">
+              <p>SARITA ROMAN  </p>
+              <hr class="ln1"/>
+              <p> <a href="" class="carrera">ECONOMISTA</a><a href="" class="carrera">FRONTED</a><a href="" class="carrera">GEOMÁTICA</a></p>
             </div>
           </div>
-          <div class="col-sm-4">
-            <div class="portafolio">
-              <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
-                <div class="btn-star"></div>
-              </div><a href="">
-                <div class="informacion w-100">
-                  <h1>BLOG LOVE</h1>
-                </div></a>
+          <div class="row description">
+            <div class="col-sm-6">
+              <p>Front-end, apasionada por el código, con muchas ganas para afrontar cada reto que se me presente por que siento que es una nueva oportunidad de demostrar que todo es posible, busco desarrollarme en el mundo tecnológico por que desde que ingrese a la Laboratoria descubri que toda idea o sueño se puede materializar, como tambien amar a Google, se ha convertido en mi compañero de día y con el descubri que podemos programar un mundo diferente. Fueron 5 meses que permitieron conocer el poder que llevamos dentro y más aun cuando trabajamos en grupo. Otra cosa que me enamora es la naturaleza sobre todo las cataratas orgulloza de mi país.</p>
             </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="portafolio">
-              <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
-                <div class="btn-star"></div>
-              </div><a href="">
-                <div class="informacion w-100">
-                  <h1>BLOG LOVE</h1>
-                </div></a>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="portafolio">
-              <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
-                <div class="btn-star"></div>
-              </div><a href="">
-                <div class="informacion w-100">
-                  <h1>BLOG LOVE</h1>
-                </div></a>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="portafolio">
-              <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
-                <div class="btn-star"></div>
-              </div><a href="">
-                <div class="informacion w-100">
-                  <h1>BLOG LOVE</h1>
-                </div></a>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="portafolio">
-              <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
-                <div class="btn-star"></div>
-              </div><a href="">
-                <div class="informacion w-100">
-                  <h1>BLOG LOVE</h1>
-                </div></a>
+            <div class="col-sm-6"><img src="img/sobremi.png" class="foto w-100"/>
+              <h2>"Programando con pasión y espíritu verde"</h2>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <div id="portafolio" class="main">
+    <div class="container text-center">
+      <div class="row portafolio">
+        <div class="title">
+          <h1>Portafolio</h1>
+        </div>
+        <div class="col-sm-4">
+          <div class="portafolio">
+            <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
+              <div class="btn-star"></div>
+              <div class="parante"></div>
+              <div class="base"></div>
+            </div><a href="">
+              <div class="informacion w-100">
+                <h1>BLOG LOVE</h1>
+              </div></a>
+          </div>
+        </div>
+        <div class="col-sm-8"><img src="img/habilidades_3.png" class="w-100"/>
+        </div>
+      </div>
+      <div class="row portafolio">
+        <div class="col-sm-4">
+          <div class="portafolio">
+            <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
+              <div class="btn-star"></div>
+              <div class="parante"></div>
+              <div class="base"></div>
+            </div><a href="">
+              <div class="informacion w-100">
+                <h1>BLOG LOVE</h1>
+              </div></a>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="portafolio">
+            <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
+              <div class="btn-star"></div>
+              <div class="parante"></div>
+              <div class="base"></div>
+            </div><a href="">
+              <div class="informacion w-100">
+                <h1>BLOG LOVE</h1>
+              </div></a>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="portafolio">
+            <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
+              <div class="btn-star"></div>
+              <div class="parante"></div>
+              <div class="base"></div>
+            </div><a href="">
+              <div class="informacion w-100">
+                <h1>BLOG LOVE</h1>
+              </div></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="habilidades" class="main">
+    <div class="container text-center">
+      <div class="row">
+        <div class="title">
+          <h1>Habilidades</h1>
+        </div>
+      </div>
+      <div class="row field1">
+        <div class="col-sm-3">
+          <div class="cont-habi text-center">
+            <div class="cuello"></div>
+            <div class="tubo"></div>
+            <div class="cont"></div>
+          </div>
+          <p>Html 80%</p>
+        </div>
+        <div class="col-sm-3">
+          <div class="cont-habi text-center">
+            <div class="cuello"></div>
+            <div class="tubo"></div>
+            <div class="cont"></div>
+          </div>
+          <p>Css3 75%</p>
+        </div>
+        <div class="col-sm-3">
+          <div class="cont-habi text-center">
+            <div class="cuello"></div>
+            <div class="tubo"></div>
+            <div class="cont"></div>
+          </div>
+          <p>Js 30%</p>
+        </div>
+        <div class="col-sm-3">
+          <div class="cont-habi text-center">
+            <div class="cuello"></div>
+            <div class="tubo"></div>
+            <div class="cont"></div>
+          </div>
+          <p>Bootstrap 50%</p>
+        </div>
+      </div>
+      <div class="row field2">
+        <div class="col-sm-3">
+          <div class="cont-habi text-center">
+            <div class="cuello"></div>
+            <div class="tubo"></div>
+            <div class="cont"></div>
+          </div>
+          <p>Jade 70%</p>
+        </div>
+        <div class="col-sm-3">
+          <div class="cont-habi text-center">
+            <div class="cuello"></div>
+            <div class="tubo"></div>
+            <div class="cont"></div>
+          </div>
+          <p>Sass 70%</p>
+        </div>
+        <div class="col-sm-3">
+          <div class="cont-habi text-center">
+            <div class="cuello"></div>
+            <div class="tubo"></div>
+            <div class="cont"></div>
+          </div>
+          <p>Wordpress 0%</p>
+        </div>
+        <div class="col-sm-3">
+          <div class="cont-habi text-center">
+            <div class="cuello"></div>
+            <div class="tubo"></div>
+            <div class="cont"></div>
+          </div>
+          <p>Base de Datos 40%</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="contacto" class="main">
+    <div class="container text-center contacto">
+      <div class="row">
+        <div class="title">
+          <h1>Contactame</h1>
+        </div>
+        <div class="fa fa-spinner fa-spin fa-3x fa-fw"><span class="sr-only"></span></div>
+      </div>
+      <div class="row">
+        <div class="redes"><a href="" class="fa fa-github"></a><a href="" class="fa fa-envelope-o"></a><a href="" class="fa fa-whatsapp"></a><a href="" class="fa fa-linkedin-square"></a><a href="" class="fa fa-pinterest-square"></a></div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="container text-center">
+      <div class="row">
+        <p>Copyright &#169; 2016 | Sarita Déside Román Colonio </p>
+      </div>
+    </div>
+  </footer>
 </body>
 <script src="js/jquery.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
