--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
       </div>
     </div>
   </div>
+  <div class="main">
+    <div class="container">
+      <div class="row">
+        <div class="global">
+          <div class="contendor">
+            <input id="toggle" type="checkbox"/>
+            <label id="botton" for="toggle" class="fa fa-power-off"></label>
+            <div class="luces">
+              <div class="caja"><img id="foco" src="img/foco.png"/><img id="luz" src="img/luz.png"/></div>
+              <div class="caja"><img id="foco" src="img/foco.png"/><img id="luz" src="img/luz.png"/></div>
+              <div class="caja"><img id="foco" src="img/foco.png"/><img id="luz" src="img/luz.png"/></div>
+              <div class="caja"><img id="foco" src="img/foco.png"/><img id="luz" src="img/luz.png"/></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div id="Sobremi">
     <div class="container text-center">
       <div class="row">
