--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Fixed navbar-->
-  <div id="menu" role="navigation" class="navbar navbar-fixed-top">
+  <div id="menu" role="navigation" class="navbar navbar-fixed-top nav-transp">
     <div class="container padd">
       <div class="navbar-header">
         <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"><span class="logo"></span></a>
@@ -25,50 +25,8 @@
   </div>
   <!--fin header	-->
   <div class="Hero">
-    <div class="container-fluid">
-      <div class="row">
-        <div id="carousel" data-ride="carousel" class="carousel slide">
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="item active"><img src="img/hero2.jpg" class="w-100"/>
-              <div class="carousel-caption"></div>
-            </div>
-            <div class="item"><img src="img/hero3.jpg" class="w-100"/>
-              <div class="carousel-caption"></div>
-            </div>
-            <div class="item"><img src="img/hero7.jpg" class="w-100"/>
-              <div class="carousel-caption"></div>
-            </div>
-            <div class="item"><img src="img/hero5.jpg" class="w-100"/>
-              <div class="carousel-caption"></div>
-            </div>
-            <div class="item"><img src="img/hero6.jpg" class="w-100"/>
-              <div class="carousel-caption"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="main">
-    <div class="container">
-      <div class="row">
-        <div class="global">
-          <div class="contendor">
-            <input id="toggle" type="checkbox"/>
-            <label id="botton" for="toggle" class="fa fa-power-off"></label>
-            <div class="luces">
-              <div class="caja"><img id="foco" src="img/foco.png"/><img id="luz" src="img/luz.png"/></div>
-              <div class="caja"><img id="foco" src="img/foco.png"/><img id="luz" src="img/luz.png"/></div>
-              <div class="caja"><img id="foco" src="img/foco.png"/><img id="luz" src="img/luz.png"/></div>
-              <div class="caja"><img id="foco" src="img/foco.png"/><img id="luz" src="img/luz.png"/></div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="opacity">
+      <div class="container-fluid"></div>
     </div>
   </div>
   <div id="Sobremi">
@@ -116,54 +74,126 @@
         </div>
         <div class="col-sm-4">
           <div class="portafolio">
-            <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
+            <div class="pantalla">
+              <div class="carta">
+                <div class="lado frente"><img src="img/portfolio_1.png" class="w-100"/>
+                </div>
+                <div class="lado atras">
+                  <h4>BLOG LOVE</h4>
+                  <p class="texto">HTML</p>
+                  <p class="texto">CSS</p>
+                  <p></p><a href="">Ver la Página</a>
+                </div>
+              </div>
               <div class="btn-star"></div>
               <div class="parante"></div>
               <div class="base"></div>
-            </div><a href="">
-              <div class="informacion w-100">
-                <h1>BLOG LOVE</h1>
-              </div></a>
+            </div>
           </div>
         </div>
-        <div class="col-sm-8"><img src="img/habilidades_3.png" class="w-100"/>
+        <div class="col-sm-4">
+          <div class="portafolio">
+            <div class="pantalla">
+              <div class="carta">
+                <div class="lado frente"><img src="img/portfolio_1.png" class="w-100"/>
+                </div>
+                <div class="lado atras">
+                  <h4>BLOG LOVE</h4>
+                  <p class="texto">HTML</p>
+                  <p class="texto">CSS</p>
+                  <p class="texto">SASS</p>
+                  <p></p><a href="">Ver la Página</a>
+                </div>
+              </div>
+              <div class="btn-star"></div>
+              <div class="parante"></div>
+              <div class="base"></div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="portafolio">
+            <div class="pantalla">
+              <div class="carta">
+                <div class="lado frente"><img src="img/portfolio_1.png" class="w-100"/>
+                </div>
+                <div class="lado atras">
+                  <h4>BLOG LOVE</h4>
+                  <p class="texto">HTML</p>
+                  <p class="texto">CSS</p>
+                  <p class="texto">SASS</p>
+                  <p class="texto">JADE</p>
+                  <p></p><a href="">Ver la Página</a>
+                </div>
+              </div>
+              <div class="btn-star"></div>
+              <div class="parante"></div>
+              <div class="base"></div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row portafolio">
         <div class="col-sm-4">
           <div class="portafolio">
-            <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
+            <div class="pantalla">
+              <div class="carta">
+                <div class="lado frente"><img src="img/portfolio_1.png" class="w-100"/>
+                </div>
+                <div class="lado atras">
+                  <h4>BLOG LOVE</h4>
+                  <p class="texto">HTML</p>
+                  <p class="texto">CSS</p>
+                  <p class="texto">SASS</p>
+                  <p class="texto">JADE</p>
+                  <p></p><a href="">Ver la Página</a>
+                </div>
+              </div>
               <div class="btn-star"></div>
               <div class="parante"></div>
               <div class="base"></div>
-            </div><a href="">
-              <div class="informacion w-100">
-                <h1>BLOG LOVE</h1>
-              </div></a>
+            </div>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="portafolio">
-            <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
+            <div class="pantalla">
+              <div class="carta">
+                <div class="lado frente"><img src="img/portfolio_1.png" class="w-100"/>
+                </div>
+                <div class="lado atras">
+                  <h4>BLOG LOVE</h4>
+                  <p class="texto">HTML</p>
+                  <p class="texto">CSS</p>
+                  <p class="texto">JS</p>
+                  <p></p><a href="">Ver la Página</a>
+                </div>
+              </div>
               <div class="btn-star"></div>
               <div class="parante"></div>
               <div class="base"></div>
-            </div><a href="">
-              <div class="informacion w-100">
-                <h1>BLOG LOVE</h1>
-              </div></a>
+            </div>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="portafolio">
-            <div class="pantalla"><img src="img/portfolio_1.png" class="w-100"/>
+            <div class="pantalla">
+              <div class="carta">
+                <div class="lado frente"><img src="img/portfolio_1.png" class="w-100"/>
+                </div>
+                <div class="lado atras">
+                  <h4>BLOG LOVE</h4>
+                  <p class="texto">HTML</p>
+                  <p class="texto">CSS</p>
+                  <p class="texto">SASS</p>
+                  <p class="texto">JADE</p>
+                  <p class="texto">JS - Jqry</p><a href="">Ver la Página</a>
+                </div>
+              </div>
               <div class="btn-star"></div>
               <div class="parante"></div>
               <div class="base"></div>
-            </div><a href="">
-              <div class="informacion w-100">
-                <h1>BLOG LOVE</h1>
-              </div></a>
+            </div>
           </div>
         </div>
       </div>
@@ -177,35 +207,33 @@
         </div>
       </div>
       <div class="row field1">
+        <div class="pulsate"></div>
+        <div class="pulsate"></div>
         <div class="col-sm-3">
           <div class="cont-habi text-center">
             <div class="cuello"></div>
-            <div class="tubo"></div>
-            <div class="cont"></div>
+            <div class="tubo id1"></div>
           </div>
           <p>Html 80%</p>
         </div>
         <div class="col-sm-3">
           <div class="cont-habi text-center">
             <div class="cuello"></div>
-            <div class="tubo"></div>
-            <div class="cont"></div>
+            <div class="tubo id2"></div>
           </div>
           <p>Css3 75%</p>
         </div>
         <div class="col-sm-3">
           <div class="cont-habi text-center">
             <div class="cuello"></div>
-            <div class="tubo"></div>
-            <div class="cont"></div>
+            <div class="tubo id3"></div>
           </div>
           <p>Js 30%</p>
         </div>
         <div class="col-sm-3">
           <div class="cont-habi text-center">
             <div class="cuello"></div>
-            <div class="tubo"></div>
-            <div class="cont"></div>
+            <div class="tubo id4"></div>
           </div>
           <p>Bootstrap 50%</p>
         </div>
@@ -214,32 +242,28 @@
         <div class="col-sm-3">
           <div class="cont-habi text-center">
             <div class="cuello"></div>
-            <div class="tubo"></div>
-            <div class="cont"></div>
+            <div class="tubo id5"></div>
           </div>
           <p>Jade 70%</p>
         </div>
         <div class="col-sm-3">
           <div class="cont-habi text-center">
             <div class="cuello"></div>
-            <div class="tubo"></div>
-            <div class="cont"></div>
+            <div class="tubo id6"></div>
           </div>
           <p>Sass 70%</p>
         </div>
         <div class="col-sm-3">
           <div class="cont-habi text-center">
             <div class="cuello"></div>
-            <div class="tubo"></div>
-            <div class="cont"></div>
+            <div class="tubo id7"></div>
           </div>
           <p>Wordpress 0%</p>
         </div>
         <div class="col-sm-3">
           <div class="cont-habi text-center">
             <div class="cuello"></div>
-            <div class="tubo"></div>
-            <div class="cont"></div>
+            <div class="tubo id8"></div>
           </div>
           <p>Base de Datos 40%</p>
         </div>
