consejos de luisa a corregir

--- a/index.html
+++ b/index.html
@@ -11,22 +11,36 @@
   <div id="menu" role="navigation" class="navbar navbar-fixed-top nav-transp">
     <div class="container padd">
       <div class="navbar-header">
-        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"><span class="logo"></span></a>
+        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#hero" class="navbar-brand"><span class="logo"></span></a>
       </div>
       <div id="collapse" class="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#Sobremi" class="link-header">Sobre mí</a></li>
-          <li><a href="#portafolio" class="link-header">Portafolio</a></li>
-          <li><a href="#habilidades" class="link-header">Habilidades</a></li>
-          <li><a href="#contacto" class="link-header">Contacto</a></li>
+          <li class="active"><a href="#Sobremi" class="link1 link-header">Sobre mí</a></li>
+          <li><a href="#portafolio" class="link2 link-header">Portafolio</a></li>
+          <li><a href="#habilidades" class="link3 link-header">Habilidades</a></li>
+          <li><a href="#contacto" class="link4 link-header">Contacto</a></li>
         </ul>
       </div>
     </div>
   </div>
   <!--fin header	-->
-  <div class="Hero">
+  <div id="hero" class="Hero">
     <div class="opacity">
-      <div class="container-fluid"></div>
+      <div class="banner">
+        <div class="marco-pantalla">
+          <div class="cont-pantalla">
+            <div class="imagen1">
+              <div class="imagen2">
+                <textarea readonly="readonly"></textarea>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="teclado">
+          <div class="touch"></div>
+          <div class="focos"></div>
+        </div>
+      </div>
     </div>
   </div>
   <div id="Sobremi">
@@ -276,10 +290,12 @@
         <div class="title">
           <h1>Contactame</h1>
         </div>
-        <div class="fa fa-spinner fa-spin fa-3x fa-fw"><span class="sr-only"></span></div>
       </div>
       <div class="row">
-        <div class="redes"><a href="" class="fa fa-github"></a><a href="" class="fa fa-envelope-o"></a><a href="" class="fa fa-whatsapp"></a><a href="" class="fa fa-linkedin-square"></a><a href="" class="fa fa-pinterest-square"></a></div>
+        <div class="redes"><a href="https://github.com/sarita-coder" class="fa fa-github"></a><a href="https://plus.google.com/u/0/103995783096870228612/about" class="fa fa-google-plus-square"></a><a href="https://www.facebook.com/edised.roman" class="fa fa-facebook"></a><a href="https://www.linkedin.com/in/saritacoder" class="fa fa-linkedin-square"></a></div>
+        <div class="correo">
+          <p>sarita.roman.colonio@gmail.com</p>
+        </div>
       </div>
     </div>
   </div>
