--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Sarita Coder</title>
+  <link rel="stylesheet" href="css/animate.css"/>
   <link rel="stylesheet" href="css/main.css"/>
   <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css"/>
 </head>
@@ -11,7 +12,7 @@
   <div id="menu" role="navigation" class="navbar navbar-fixed-top nav-transp">
     <div class="container padd">
       <div class="navbar-header">
-        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#hero" class="navbar-brand"><span class="logo"></span></a>
+        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#hero" class="navbar-brand"><span class="logo"> </span></a>
       </div>
       <div id="collapse" class="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -27,6 +28,10 @@
   <div id="hero" class="Hero">
     <div class="opacity">
       <div class="banner">
+        <div class="titulo">
+          <p class="text-you animated fadeInDown">Lo que tú ves</p>
+          <p class="text-i animated fadeInDown">Lo que hago</p>
+        </div>
         <div class="marco-pantalla">
           <div class="cont-pantalla">
             <div class="imagen1">
@@ -51,19 +56,24 @@
             <div class="contedor">
               <div class="etiqueta etiq"></div>
             </div>
-            <div class="poligono"></div>
-            <p> <a href="" class="actitudes">Fuerza</a></p>
-            <hr class="ln1"/>
-            <p> <a href="" class="actitudes">Perseverante</a></p>
-            <hr class="ln1"/>
-            <p> <a href="" class="actitudes">Naturaleza</a></p>
+            <div class="poligono">
+              <p> <a href="" class="actitudes">Comprometida</a></p>
+              <hr class="ln1"/>
+              <p> <a href="" class="actitudes">Fuerza</a></p>
+              <hr class="ln1"/>
+              <p> <a href="" class="actitudes">Perseverante</a></p>
+              <hr class="ln1"/>
+              <p> <a href="" class="actitudes">Optimista</a></p>
+              <hr class="ln1"/>
+              <p> <a href="" class="actitudes">Naturaleza</a></p>
+            </div>
             <div class="contenedor etiqueta etiq2"></div>
           </div>
         </div>
         <div class="col-sm-9 pd-50">
           <div class="row">
             <div class="col-foto">
-              <p>SARITA ROMAN  </p>
+              <p>Sarita Román Colonio  </p>
               <hr class="ln1"/>
               <p> <a href="" class="carrera">ECONOMISTA</a><a href="" class="carrera">FRONTED</a><a href="" class="carrera">GEOMÁTICA</a></p>
             </div>
