--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row pb-50">
         <div class="col-md-12 text-center">
           <div class="portfolio-filter">
             <ul>
@@ -119,14 +119,14 @@
             </ul>
           </div>
           <div class="portfolio_item">
-            <div class="mix category-1 css"><img src="img/whatsap.png"/></div>
-            <div class="mix category-1 jade"><img src="img/future-imperfect.png"/></div>
-            <div class="mix category-2 js"><img src="img/flatness.png"/></div>
-            <div class="mix category-1 grupal"><img src="img/flat.png"/></div>
-            <div class="mix category-1 grupal"><img src="img/republica.png"/></div>
-            <div class="mix category-2 sass"><img src="img/portfolio_1.png"/></div>
-            <div class="mix category-2 sass"><img src="img/triangle.png"/></div>
-            <div class="mix category-2 js"><img src="img/reloj_digital.png"/></div>
+            <div class="mix category-1 css"><a href="http://sarita-coder.github.io/whassapt"><img src="img/whatsap.png"/></a></div>
+            <div class="mix category-1 jade"><a href=""><img src="img/future-imperfect.png"/></a></div>
+            <div class="mix category-2 js"><a href=""><img src="img/flatness.png"/></a></div>
+            <div class="mix category-1 grupal"><a href=""><img src="img/flat.png"/></a></div>
+            <div class="mix category-1 grupal"><a href=""><img src="img/republica.png"/></a></div>
+            <div class="mix category-2 sass"><a href=""><img src="img/portfolio_1.png"/></a></div>
+            <div class="mix category-2 sass"><a href=""><img src="img/triangle.png"/></a></div>
+            <div class="mix category-2 js"><a href=""><img src="img/reloj_digital.png"/></a></div>
           </div>
         </div>
       </div>
