--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="opacity">
       <div class="banner">
         <div class="titulo">
-          <p class="text-you animated fadeInDown">Lo que tú ves</p>
-          <p class="text-i animated fadeInDown">Lo que hago</p>
+          <p class="text-you animated fadeInLeft">Lo que tú ves</p>
+          <p class="text-i animated fadeInRight">Lo que hago</p>
         </div>
         <div class="marco-pantalla">
           <div class="cont-pantalla">
@@ -102,7 +102,7 @@
         </div>
         <div class="col-sm-8 col-xs-10">
           <div class="about_p">
-            <p>Trabajos que realize y del que forme parte de proyectos en equipo con tiempos de entrega especiales me han permitido aprender y seguir evolucionando en cada proyecto.</p>
+            <p>Trabajos según la tecnología utilizada y del que forme parte del equipo de proyecto por con tiempos de entrega especiales me han permitido aprender y seguir evolucionando en cada proyecto. </p>
           </div>
         </div>
       </div>
@@ -119,14 +119,8 @@
             </ul>
           </div>
           <div class="portfolio_item">
-            <div class="mix category-1 css"><a href="http://sarita-coder.github.io/whassapt"><img src="img/whatsap.png"/></a></div>
-            <div class="mix category-1 jade"><a href=""><img src="img/future-imperfect.png"/></a></div>
-            <div class="mix category-2 js"><a href=""><img src="img/flatness.png"/></a></div>
-            <div class="mix category-1 grupal"><a href=""><img src="img/flat.png"/></a></div>
-            <div class="mix category-1 grupal"><a href=""><img src="img/republica.png"/></a></div>
-            <div class="mix category-2 sass"><a href=""><img src="img/portfolio_1.png"/></a></div>
-            <div class="mix category-2 sass"><a href=""><img src="img/triangle.png"/></a></div>
-            <div class="mix category-2 js"><a href=""><img src="img/reloj_digital.png"/></a></div>
+            <div class="mix category-1 css"><a href="http://sarita-coder.github.io/whassapt" target="_blank"><img src="img/whatsap.png"/></a></div>
+            <div class="mix category-1 jade"><a href="http://sarita-coder.github.io/future-imperfect" target="_blank"><img src="img/future-imperfect.png"/></a></div>
           </div>
         </div>
       </div>
