cambios en ´portafolio

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="col-sm-8 col-xs-10">
           <div class="about_p">
-            <p>Trabajos según la tecnología utilizada y del que forme parte del equipo de proyecto por con tiempos de entrega especiales me han permitido aprender y seguir evolucionando en cada proyecto. </p>
+            <p>Trabajos según la tecnología utilizada y del que forme parte del equipo, con tiempos de entrega especiales me han permitido aprender y seguir evolucionando en cada proyecto. </p>
           </div>
         </div>
       </div>
@@ -121,6 +121,12 @@
           <div class="portfolio_item">
             <div class="mix category-1 css"><a href="http://sarita-coder.github.io/whassapt" target="_blank"><img src="img/whatsap.png"/></a></div>
             <div class="mix category-1 jade"><a href="http://sarita-coder.github.io/future-imperfect" target="_blank"><img src="img/future-imperfect.png"/></a></div>
+            <div class="mix category-1 js"><a href="http://sarita-coder.github.io/reloj-digital" target="_blank"><img src="img/reloj_digital.png"/></a></div>
+            <div class="mix category-1 grupal"><a href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica" target="_blank"><img src="img/republica.png"/></a></div>
+            <div class="mix category-1 sass"><a href="http://sarita-coder.github.io/Love-Blog" target="_blank"><img src="img/portfolio_1.png"/></a></div>
+            <div class="mix category-1 sass"><a href="http://sarita-coder.github.io/triangle-free" target="_blank"><img src="img/triangle.png"/></a></div>
+            <div class="mix category-1 jade"><a href="http://sarita-coder.github.io/future-imperfect" target="_blank"><img src="img/flatness.png"/></a></div>
+            <div class="mix category-1 sass"><a href="http://sarita-coder.github.io/future-imperfect" target="_blank"><img src="img/flat.png"/></a></div>
           </div>
         </div>
       </div>
