--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="banner">
         <div class="titulo">
           <p class="text-you animated fadeInDown">Lo que tú ves</p>
-          <p class="text-i animated fadeInDown">Lo que hago</p>
+          <p class="text-i animated fadeInDown">Lo que hago  :) </p>
         </div>
         <div class="marco-pantalla">
           <div class="cont-pantalla">
