actualizando en casa

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     </div>
   </div>
   <div id="lema" class="w-100">
-    <div class="container lema text-center">
-      <h2>"Programando con pasión y espíritu verde"</h2>
+    <div id="maquina" class="container lema text-center">
+      <h2> </h2>
     </div>
   </div>
   <div id="portafolio" class="main our_woks_area section-padding">
