modificaciones en la presetacion contactame

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8"/>
   <title>Sarita Coder</title>
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
+  <link rel="icon" href="img/SARITA-02.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="css/animate.css"/>
   <link rel="stylesheet" href="css/ihover.css"/>
@@ -72,10 +73,22 @@
         </div>
       </div>
       <div class="row description">
-        <div class="col-sm-8 col-sm-offset-2 text-center">
+        <div class="col-sm-5 col-sm-offset-1 text-center">
+          <p class="hola text-left">¡Hola!</p>
+          <p>Mi nombre es Sarita, soy desarrolladora front-end mi pasión por el mundo digital se ha inclinado por la programación desde que ingrese a la Laboratoria descubrí que toda idea o sueño se puede materializar. Me encanta lo que hago y disfruto mucho trabajando en equipo.</p>
+          <div class="cualidades">
+            <div class="row">
+              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-heart-o"></span><span>Naturaleza</span></div>
+              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-thumbs-o-up"></span><span>Fuerza</span></div>
+              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-lightbulb-o"></span><span>Inteligente</span></div>
+              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-users"></span><span>Equipo</span></div>
+              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-laptop"></span><span>Compañero</span></div>
+              <div class="col-sm-2 col-xs-3 text-center"><span class="fa fa-globe"></span><span>Viajar</span></div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5 text-center">
           <div class="foto"></div>
-          <p>Sarita Román Colonio </p>
-          <p>Busco desarrollarme en el mundo tecnológico por que desde que ingrese a la Laboratoria descubrí que toda idea o sueño se puede materializar. Como también amar a Google, que se ha convertido en mi compañero, mostrándome que podemos programar un mundo diferente. Han sido 5 meses que me permitieron conocer el poder que llevamos dentro y más aun cuando trabajamos en equipo.</p>
         </div>
       </div>
     </div>
@@ -112,20 +125,55 @@
             </ul>
           </div>
           <div class="portfolio_item">
-            <div class="mix category-1 css"><a href="http://sarita-coder.github.io/whassapt" target="_blank"><img src="img/whatsap.png"/></a></div>
-            <div class="mix category-1 jade"><a href="http://sarita-coder.github.io/future-imperfect" target="_blank"><img src="img/future-imperfect.png"/></a></div>
-            <div class="mix category-1 sass"><a href="http://sarita-coder.github.io/triangle-free" target="_blank"><img src="img/triangle.png"/></a></div>
-            <div class="mix category-1 js"><a href="http://sarita-coder.github.io/reloj-digital" target="_blank"><img src="img/reloj_digital.png"/></a></div>
-            <div class="mix category-1 grupal sass jade"><a href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica" target="_blank"><img src="img/republica.png"/></a></div>
-            <div class="mix category-1 sass"><a href="http://sarita-coder.github.io/Love-Blog" target="_blank"><img src="img/portfolio_1.png"/></a></div>
-            <div class="mix category-1 jade">
-              <div class="ih-item square effect8 scale_up"></div><a href="#" target="_blank">
-                <div class="img"><img src="img/flat-theme-01.png"/></div>
-                <div class="info">
-                  <h3>FLAT THEME</h3><a href="http://sazabache.github.io/Flat-theme"><span class="fa fa-arrow-right"></span></a>
-                </div></a>
+            <div class="mix category-1 jade sass">
+              <div class="ih-item square effect8 scale_up colored"><a href="#">
+                  <div class="img"><img src="img/flat-theme-01.png"/></div>
+                  <div class="info">
+                    <h3>Flat Theme</h3><a href="http://sarita-coder.github.io/Love-Blog"></a><span class="fa fa-arrow-right"></span>
+                  </div></a></div>
             </div>
-            <div class="mix category-1 sass grupal"><a href="http://sarita-coder.github.io/future-imperfect" target="_blank"><img src="img/flat.png"/></a></div>
+            <div class="mix category-1 sass jade">
+              <div class="ih-item square effect8 scale_up colored"><a href="#">
+                  <div class="img"><img src="img/future-imperfect.png"/></div>
+                  <div class="info">
+                    <h3>Future Imperfect</h3><a href="http://sarita-coder.github.io/future-imperfect"></a><span class="fa fa-arrow-right"></span>
+                  </div></a></div>
+            </div>
+            <div class="mix category-1 jade grupal sass">
+              <div class="ih-item square effect8 scale_up colored"><a href="#">
+                  <div class="img"><img src="img/republica.png"/></div>
+                  <div class="info">
+                    <h3>República</h3><a href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica"></a><span class="fa fa-arrow-right"></span>
+                  </div></a></div>
+            </div>
+            <div class="mix category-1 css">
+              <div class="ih-item square effect8 scale_up colored"><a href="#">
+                  <div class="img"><img src="img/whatsap.png"/></div>
+                  <div class="info">
+                    <h3>Whaptsap</h3><a href="http://sarita-coder.github.io/whassapt"></a><span class="fa fa-arrow-right"></span>
+                  </div></a></div>
+            </div>
+            <div class="mix category-1 sass">
+              <div class="ih-item square effect8 scale_up colored"><a href="#">
+                  <div class="img"><img src="img/triangle.png"/></div>
+                  <div class="info">
+                    <h3>Triangle</h3><a href="http://sarita-coder.github.io/triangle-free"></a><span class="fa fa-arrow-right"></span>
+                  </div></a></div>
+            </div>
+            <div class="mix category-1 js">
+              <div class="ih-item square effect8 scale_up colored"><a href="#">
+                  <div class="img"><img src="img/reloj_digital.png"/></div>
+                  <div class="info">
+                    <h3>Reloj Digital</h3><a href="http://sarita-coder.github.io/reloj-digital"></a><span class="fa fa-arrow-right"></span>
+                  </div></a></div>
+            </div>
+            <div class="mix category-1 sass grupal">
+              <div class="ih-item square effect8 scale_up colored"><a href="#">
+                  <div class="img"><img src="img/flat.png"/></div>
+                  <div class="info">
+                    <h3>Flat Theme</h3><a href="http://sazabache.github.io/Flat-theme"></a><span class="fa fa-arrow-right"></span>
+                  </div></a></div>
+            </div>
           </div>
         </div>
       </div>
@@ -147,13 +195,13 @@
         <div class="col-sm-4 col-xs-12 col-sm-offset-2">
           <div class="especialidad"><a href=""><span class="fa fa-code"></span></a>
             <p>Desarrolladora Web</p>
-            <p>Maquetación de páginas web responsive con diferentes tecnologías: Html, Css, Sass, Jade, Js, Jquery, Worpress, Base de datos.</p>
+            <p>Maquetación de páginas web responsive con diferentes tecnologías: Html, Css, Sass, Jade, Js, Jquery, Worpress. Con nociones en Modelo Vista Controlador con Java, Base de datos con Sql, Postgres y MySql.</p>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12">
           <div class="especialidad"><a href=""><span class="fa fa-globe"></span></a>
             <p>Geomática</p>
-            <p>Desarrolo de aplicaciones para la creación y administración de informácion espacial para mejorar la habilidad del ususario para acceder a información y compartirla de manera más efectiva.</p>
+            <p>Desarrollo de aplicaciones para la creación y administración de informácion espacial para mejorar la experiencia de navegabilidad del ususario para acceder a información y compartirla de manera efectiva.</p>
           </div>
         </div>
       </div>
@@ -167,9 +215,23 @@
         </div>
       </div>
       <div class="row">
-        <div class="redes"><a href="https://github.com/sarita-coder" target="_blank" class="fa fa-github"></a><a href="https://plus.google.com/u/0/103995783096870228612/about" target="_blank" class="fa fa-google-plus-square"></a><a href="https://www.facebook.com/edised.roman" target="_blank" class="fa fa-facebook"></a><a href="https://www.linkedin.com/in/saritacoder" target="_blank" class="fa fa-linkedin-square"></a></div>
-        <div class="correo">
-          <p>sarita.roman.colonio@gmail.com</p>
+        <p> <a href="mailto:sarita.roman.colonio@gmail.com" class="mail">sarita.roman.colonio@gmail.com</a></p>
+        <div class="col-sm-4 col-sm-offset-2">
+          <div class="foto1"></div>
+        </div>
+        <div class="col-sm-5">
+          <form>
+            <div class="form-group text-left">
+              <label for="exampleInputEmail1" class="w-100">Name
+                <input type="email" id="exampleInputEmail1" placeholder="Name" class="form-control"/>
+              </label>
+              <label for="exampleInputEmail1" class="w-100">Email
+                <input type="email" id="exampleInputEmail1" placeholder="Email" class="form-control"/>
+              </label>
+              <textarea rows="3" class="form-control">Hola, Tengo un proyecto y me gustaría que seas parte del equipo por que necesitamos personas comprometidas y creativas. </textarea>
+              <button type="submit" class="btn-enviar btn btn-default">Enviar</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
