modificaciones en la presetacion contactame telefono

--- a/index.html
+++ b/index.html
@@ -216,10 +216,11 @@
       </div>
       <div class="row">
         <p> <a href="mailto:sarita.roman.colonio@gmail.com" class="mail">sarita.roman.colonio@gmail.com</a></p>
-        <div class="col-sm-4 col-sm-offset-2">
+        <p><a href="" class="mail">991645498</a></p>
+        <div class="col-sm-4 col-sm-offset-1">
           <div class="foto1"></div>
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-6">
           <form>
             <div class="form-group text-left">
               <label for="exampleInputEmail1" class="w-100">Name
